--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <button class="button" id="button">babbling brook</button>
+  <button class="button" id="button">babbling brook</button><br><br>
+  <button class="button" id="button2">fire</button>
   <script src="main.js"></script>
 </body>
 </html>
