--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <button class="button" id="button">babbling brook</button><br><br>
-  <button class="button" id="button2">fire</button>
+  <button class="button" id="button">babbling brook</button>
+  <button class="button" id="button2">fire</button><br><br>
+  
+  <fieldset style = "width:40%">
+  <legend style = "font-size:130%">Explanation</legend>
+  <p>According to Farnell, the sound of fire has three dominant parts: hissing, crackling, and lapping, all of which begin with white noise. </p>
+  
+  <p>Hissing:</p>
+  <img src = "hissing.png" style = "width:38.6%; height:46.3%"><br>
+ 
+  <p>Crackling:</p>
+  <img src = "crackling.png" style = "width:35.85%; height:24.55%"><br>
+
+  <p>Lapping:</p>
+  <img src = "lapping.png" style = "width:35.1%; height:62.7%"><br>
+
+  <p>Audio Signal Graph:</p>
+
+  </fieldset>
+  
   <script src="main.js"></script>
 </body>
 </html>
