--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   
   <fieldset style = "width:40%">
   <legend style = "font-size:130%">Explanation</legend>
-  <p>According to Farnell, the sound of fire has three dominant parts: hissing, crackling, and lapping, all of which begin with white noise. </p>
+  <p>The sound of fire has three dominant parts: hissing, crackling, and lapping, all of which begin with white noise. </p>
   
   <p>Hissing:</p>
-  <img src = "hissing.png" style = "width:38.6%; height:46.3%"><br>
+  <img src = "hissing.png" style = "width:100%; height:120%"><br>
  
   <p>Crackling:</p>
-  <img src = "crackling.png" style = "width:35.85%; height:24.55%"><br>
+  <img src = "crackling.png" style = "width:100%; height:68.5%"><br>
 
   <p>Lapping:</p>
-  <img src = "lapping.png" style = "width:35.1%; height:62.7%"><br>
+  <img src = "lapping.png" style = "width:100%; height:178.6%"><br>
 
   <p>Audio Signal Graph:</p>
+  <img src = "graph.png" style = "width:100%; height:127.8%"><br>
 
+  <p>Lastly mix these parts to create the composite effect</p>
   </fieldset>
   
   <script src="main.js"></script>
