--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>The sound of fire has three dominant parts: hissing, crackling, and lapping, all of which begin with white noise. </p>
   
   <p>Hissing:</p>
-  <img src = "hissing.png" style = "width:100%; height:120%"><br>
+  <img src = "hissing.png" style = "width:100%; height:118.56%"><br>
  
   <p>Crackling:</p>
   <img src = "crackling.png" style = "width:100%; height:68.5%"><br>
@@ -18,7 +18,7 @@
   <img src = "lapping.png" style = "width:100%; height:178.6%"><br>
 
   <p>Audio Signal Graph:</p>
-  <img src = "graph.png" style = "width:100%; height:127.8%"><br>
+  <img src = "graph.png" style = "width:100%; height:127.8%">
 
   <p>Lastly mix these parts to create the composite effect</p>
   </fieldset>
